--- a/src/views/about.ejs
+++ b/src/views/about.ejs
@@ -1,37 +1,17 @@
-<div class="container mb-5">
-    <div class="card ">
-        <div class="card-header ">
-            <h2 class="text-center">About it</h2>
-        </div>
-        <div class="card-text mx-5 my-3">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci ex aut rerum quisquam tenetur similique fugit sequi repudiandae numquam, excepturi accusantium inventore culpa molestiae provident obcaecati deleniti natus magni, optio voluptates
-                quam facere accusamus nisi? Vel perferendis repudiandae velit sed quod, voluptatem hic asperiores magni aperiam? Nisi alias dicta totam itaque ex deleniti vel mollitia magni incidunt, fugiat amet sed?</p>
-        </div>
-    </div>
-</div>
-<div class="container mb-5">
-    <div class="card-group">
-        <div class="card ">
-            <div class="card-header ">How to use</div>
-            <div class="card-body">
-                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia dolorem sapiente earum ratione quas vel corrupti? Officia asperiores error veritatis?</p>
-                <p class="card-text"></p>
+<div class="container">
+    <div class="card">
+        <div class="card-body">
+            <div>
+                <h1 class="main-title text-center">We give the best service <br> That you can find</h1>
             </div>
-        </div>
-        <div class="card ">
-            <div class="card-header ">How long does it last</div>
-            <div class="card-body">
-                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem labore atque numquam est, voluptate aperiam?</p>
-                <p class="card-text"></p>
+            <div class="card-text fs-5">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum quae facilis laudantium aut, quos expedita quas culpa dolorem, libero doloremque odio magnam? Error, delectus autem. Ullam fuga nisi quo et necessitatibus, nulla vel aperiam eligendi
+                vero, exercitationem explicabo! Vel, minima.
             </div>
+            <hr>
+            <img class="card-img rounded-2 " src="https://images.pexels.com/photos/6609111/pexels-photo-6609111.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
         </div>
-        <div class="card ">
-            <div class="card-header ">For Free</div>
-            <div class="card-body">
-                <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis, modi unde perferendis repellendus nesciunt omnis necessitatibus officiis maxime culpa velit voluptatem, illum recusandae quas, assumenda sint sunt. Dolorum quasi iusto quam
-                    perspiciatis nulla, sequi dolor cupiditate? Cum neque reprehenderit repellat error. Laboriosam sunt laborum animi. Perferendis quae eos accusamus autem!</p>
-                <p class="card-text"></p>
-            </div>
-        </div>
+
+
     </div>
 </div>
