--- a/src/views/partials/navigation.ejs
+++ b/src/views/partials/navigation.ejs
@@ -18,7 +18,7 @@
             <div class="justify-self-right">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="/users/signin">Profile</a>
+                        <a class="nav-link" href="/users/">Profile</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/apps/">Apps</a>
